# python-project-skeleton

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cookiecutter.json  mkdocs.yml  poetry.toml  pyproject.toml  setup.cfg  versions.json
.github/: labeler.yml
.github/workflows/: ci.yaml  pr-lint.yaml
0.1/: 404.html  index.html
0.1.0/changelog/: index.html
0.1.0/quickstart/: index.html
0.1.0/requirements/: index.html
0.1.0/tools_included/ide_settings/: index.html
0.1.0/tools_included/linters/: index.html
0.1.0/tools_included/makefile/: index.html
0.1/changelog/: index.html
0.1/quickstart/: index.html
0.1/requirements/: index.html
0.1/search/: search_index.json
0.1/tools_included/docker/: index.html
0.1/tools_included/documentation/: index.html
0.1/tools_included/formatters/: index.html
0.1/tools_included/github_actions/: index.html
0.1/tools_included/ide_settings/: index.html
0.1/tools_included/linters/: index.html
0.1/tools_included/logging/: index.html
0.1/tools_included/makefile/: index.html
0.1/tools_included/poetry/: index.html
0.1/tools_included/pre-commit/: index.html
0.1/tools_included/tests/: index.html
0.2/: index.html
0.2.0/: index.html
0.2.0/quickstart/: index.html
0.2.0/requirements/: index.html
0.2.0/search/: search_index.json
0.2.0/tools_included/docker/: index.html
0.2.0/tools_included/github_actions/: index.html
0.2.0/tools_included/ide_settings/: index.html
0.2.0/tools_included/makefile/: index.html
0.2.0/tools_included/poetry/: index.html
0.2.0/tools_included/pre-commit/: index.html
0.2/changelog/: index.html
0.2/requirements/: index.html
0.2/search/: search_index.json
0.2/tools_included/docker/: index.html
0.2/tools_included/documentation/: index.html
0.2/tools_included/formatters/: index.html
0.2/tools_included/github_actions/: index.html
0.2/tools_included/ide_settings/: index.html
0.2/tools_included/linters/: index.html
0.2/tools_included/poetry/: index.html
0.2/tools_included/tests/: index.html
0.3/: index.html
0.3.0/: 404.html  sitemap.xml
0.3.0/changelog/: index.html
0.3.0/tools_included/formatters/: index.html
0.3.0/tools_included/linters/: index.html
0.3/search/: search_index.json
0.3/tools_included/github_actions/: index.html
0.3/tools_included/logging/: index.html
0.3/tools_included/makefile/: index.html
0.4/: index.html  sitemap.xml
0.4/changelog/: index.html
0.4/search/: search_index.json
0.4/tools_included/formatters/: index.html
0.4/tools_included/ide_settings/: index.html
0.4/tools_included/makefile/: index.html
0.4/tools_included/pre-commit/: index.html
0.4/tools_included/tests/: index.html
0.5/: 404.html  index.html
0.5.0/changelog/: index.html
0.5.0/quickstart/: index.html
0.5.0/search/: search_index.json
0.5.0/theme/: main.html
0.5.0/tools_included/docker/: index.html
0.5/changelog/: index.html
0.5/requirements/: index.html
0.5/search/: search_index.json
0.6/: index.html
0.6/changelog/: index.html
0.6/requirements/: index.html
0.6/search/: search_index.json
docs/: quickstart.md  requirements.md
docs/tools_included/: docker.md  documentation.md  formatters.md  github_actions.md  ide_settings.md  linters.md  logging.md  makefile.md  poetry.md  pre-commit.md  tests.md  uv.md
hooks/: post_gen_project.py  pre_gen_project.py
latest/quickstart/: index.html
latest/requirements/: index.html
scripts/: .verchew.ini  open  req_fixer
tests/: constants.py  project_inputs.py  test_project_gen.py
{{cookiecutter.project_name}}/: .dockerignore  .editorconfig  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile_poetry  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
{{cookiecutter.project_name}}/.github/: dependabot.yml  labeler.yml
{{cookiecutter.project_name}}/.github/workflows/: build_docker.yaml  ci.yaml  ci_tests.yaml  main.yaml  poetry-example.yml  pr-lint.yaml
{{cookiecutter.project_name}}/docker/: entrypoint.sh
{{cookiecutter.project_name}}/docs/reference/: constants.md  exceptions.md  settings.md
{{cookiecutter.project_name}}/docs_sources/mkdocs/: advanced.md  mkdocs.yml
{{cookiecutter.project_name}}/docs_sources/mkdocs/reference/: {{cookiecutter.package_name}}.md
{{cookiecutter.project_name}}/docs_sources/sphinx/: conf.py  installation.rst  make.bat
{{cookiecutter.project_name}}/notebooks/profile_default/: .gitignore
{{cookiecutter.project_name}}/scripts/: .verchew.ini  checksum  gen_ref_pages.py  open  parse_poetry_req  req_fixer  verchew
{{cookiecutter.project_name}}/src/configs/dev/: logging_config.yaml
{{cookiecutter.project_name}}/src/configs/local/: logging_config.yaml
{{cookiecutter.project_name}}/src/configs/prod/: logging_config.yaml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py  constants.py  delete_me.py  exceptions.py  logging_setup.py  settings.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/cli/: __init__.py  main.py  users.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/configs/local/: logging_config.yaml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/configs/prod/: logging_config.yaml
{{cookiecutter.project_name}}/tests/: __init__.py  conftest.py  test_cli.py  test_conversions.py  test_delete_me.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  cli.py  constants.py  conversions.py  exceptions.py  logging_setup.py  settings.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/cli/: files.py  main.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/cli/lands/: main.py  reigns.py  towns.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/configs/dev/: logging_config.yaml
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/configs/prod/: logging_config.yaml
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/data/: make_dataset.py
(+26 files in other folders)
