[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "python-project-skeleton"
version = "0.1.0"
description = "Cookiecutter template for Python projects"
authors = ["Marco Henriques <marco.martins.henriques@gmail.com>"]
maintainers = ["Marco Henriques <marco.martins.henriques@gmail.com>"]
homepage = "https://github.com/marcohenriques/python-project-skeleton"
repository = "https://github.com/marcohenriques/python-project-skeleton"
documentation = "https://marcohenriques.github.io/python-project-skeleton/"
readme = "README.md"
keywords = []
license = ""

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
pre-commit = "^2.20.0"

# Tests
[tool.poetry.group.tests]
optional = false
[tool.poetry.group.tests.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-clarity = "^1.0.1"
pytest-cookies = "^0.6.1"

# Documentation
[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.7"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
pygments = "^2.13.0"
pymdown-extensions = "^9.7"


####################
### TOOLS CONFIG ###
####################

### FORMATTERS

[tool.black]
target-version = ["py39", "py310"]
line-length = 100
ipynb = false


[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = 2
line_length = 100


### LINTERS

[tool.mypy]
plugins = []
cache_dir = ".cache/mypy/"
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false


### TESTS
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict",
    "-vv",
    "-r sxX",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--no-cov-on-fail",
]
console_output_style = "count"
filterwarnings = ["ignore::DeprecationWarning"]
